# predictive-monitoring-tool

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: fase-2-feature-pipeline.md  fase-2.5-walking-skeleton.md  spec.md
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
notebooks/: 01_exploracion_datos_sinteticos.ipynb  02_feature_engineering.ipynb
src/argos/: __init__.py
src/argos/data/: __init__.py  generator.py  scenarios.py
src/predictive_monitoring_tool/: __init__.py
src/predictive_monitoring_tool/api/: __init__.py  main.py
src/predictive_monitoring_tool/data/: __init__.py  features.py  generator.py
tests/: test_features.py  test_generator.py  test_health.py
