[project]
name = "argos"
version = "0.1.0"
description = "Argos — predictive AIOps: synthetic metrics generator, anomaly detection, and diagnosis agent."
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argos"]
