[project]
name = "predictive_monitoring_tool"
version = "0.1.0"
description = "Predictive AIOps: synthetic metrics generator, anomaly detection, and diagnosis agent."
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "ruff>=0.6",
]
notebooks = [
    "matplotlib>=3.9",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/predictive_monitoring_tool"]
